center align fix

--- a/style.css
+++ b/style.css
@@ -25,5 +25,5 @@ h1 {
 #stripe {
   background-color: white;
   height: 30px;
-  text-align: left;
+  text-align: center;
 }
